// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<RCTScrollView>
  <View>
    <View />
    <View>
      <ArticleParagraph>
        This being Black History Month, last week
      </ArticleParagraph>
    </View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 20,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <InteractiveWrapper />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <ArticleParagraph>
        Some content
      </ArticleParagraph>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View>
      <View>
        <PullQuote>
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": "100%",
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`2. an article with no content 1`] = `
<RCTScrollView>
  <View>
    <View />
    <View>
      <View
        style={
          Object {
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <View>
        <RelatedArticles />
      </View>
    </View>
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. an article with a nested markup in first paragraph displays no drop cap 1`] = `
<RCTScrollView>
  <View>
    <View />
    <View>
      <ArticleParagraph>
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Q Some years ago I made the decision to take as a friend a woman who is very opinionated.
        </Text>
      </ArticleParagraph>
    </View>
    <View>
      <ArticleParagraph>
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          When she does come to social events, she dominates.
        </Text>
      </ArticleParagraph>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. an article skeleton with responsive items 1`] = `
<RCTScrollView>
  <View>
    <View />
    <View>
      <ArticleParagraph>
        This being Black History Month, last week
      </ArticleParagraph>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "marginBottom": 20,
            "maxWidth": 660,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <InteractiveWrapper />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <ArticleParagraph>
        Some content
      </ArticleParagraph>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "width": 660,
          }
        }
      >
        <PullQuote>
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": 660,
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;
